--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- Header -->
+    <!-- <header class="header">
       <div class="header-container container">
         <nav class="header-nav">
           <a class="logo" href="./index.html"
@@ -52,15 +53,17 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <main>
+      <!-- Hero section -->
       <section class="hero-section">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-button" type="button">Order Service</button>
         </div>
       </section>
-      <section class="feature-section">
+      <!-- Feature section -->
+      <!-- <section class="feature-section">
         <div class="container">
           <h2 class="visually-hidden">Our Features</h2>
           <ul class="feature-list">
@@ -114,8 +117,9 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="team-section">
+      </section> -->
+      <!-- Team section  -->
+      <!-- <section class="team-section">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="team-list">
@@ -365,8 +369,9 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="portfolio-section">
+      </section> -->
+      <!-- Portfolio section -->
+      <!-- <section class="portfolio-section">
         <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -480,9 +485,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer class="footer-menu">
+    <!-- Footer -->
+    <!-- <footer class="footer-menu">
       <div class="container container-footer">
         <div class="container-footer-logo">
           <a class="logo" href="./index.html"
@@ -568,9 +574,9 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <!-- Modal window -->
-    <div class="backdrop">
+    <!-- <div class="backdrop">
       <div class="modal">
         <button
           class="modal-btn-close"
@@ -654,6 +660,6 @@
           <button class="modal-btn-send" type="submit">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
