--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
       </section>
       <!-- Feature section -->
-      <!-- <section class="feature-section">
+      <section class="feature-section">
         <div class="container">
           <h2 class="visually-hidden">Our Features</h2>
           <ul class="feature-list">
@@ -117,7 +117,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Team section  -->
       <!-- <section class="team-section">
         <div class="container">
