Added @media to team-section for mobile, tablet, and desktop.

--- a/index.html
+++ b/index.html
@@ -119,12 +119,16 @@
         </div>
       </section>
       <!-- Team section  -->
-      <!-- <section class="team-section">
+      <section class="team-section">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-li">
               <img
+                srcset="
+                  ./images/mark_photo.jpg    1x,
+                  ./images/mark_photo@2x.jpg 2x
+                "
                 src="./images/mark_photo.jpg"
                 alt="Mark Guerrero, the Product Designer, a dark-haired man in a light blue shirt"
                 width="264"
@@ -186,6 +190,7 @@
             </li>
             <li class="team-li">
               <img
+                srcset="./images/tom_photo.jpg 1x, ./images/tom_photo@2x.jpg 2x"
                 src="./images/tom_photo.jpg"
                 alt="Tom Ford, the Frontend Developer, a light-haired smiling man in a light blue shirt"
                 width="264"
@@ -247,6 +252,10 @@
             </li>
             <li class="team-li">
               <img
+                srcset="
+                  ./images/camila_photo.jpg    1x,
+                  ./images/camila_photo@2x.jpg 2x
+                "
                 src="./images/camila_photo.jpg"
                 alt="Camila Garcia, the Marketing, a dark-haired woman in a pink sweater"
                 width="264"
@@ -308,6 +317,10 @@
             </li>
             <li class="team-li">
               <img
+                srcset="
+                  ./images/daniel_photo.jpg    1x,
+                  ./images/daniel_photo@2x.jpg 2x
+                "
                 src="./images/daniel_photo.jpg"
                 alt="Daniel Wilson, the UI Designer, a dark-haired smiling man in gray longsleeve"
                 width="264"
@@ -369,7 +382,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Portfolio section -->
       <!-- <section class="portfolio-section">
         <div class="container">
