--- a/index.html
+++ b/index.html
@@ -384,17 +384,37 @@
         </div>
       </section>
       <!-- Portfolio section -->
-      <!-- <section class="portfolio-section">
+      <section class="portfolio-section">
         <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-li">
               <div class="portfolio-app">
-                <img
-                  src="./images/banking_app.jpg"
-                  alt="banking app, the image of 7 violet screens of the bank app"
-                  width="360"
-                  height="300" />
+                <picture>
+                  <source
+                    media="(min-width: 320px)"
+                    srcset="
+                      ./images/banking_app_mob.jpg    1x,
+                      ./images/banking_app_mob@2x.jpg 2x
+                    " />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/banking_app_tab.jpg    1x,
+                      ./images/banking-app_tab@2x.jpg 2x
+                    " />
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/banking_app_desk.jpg    1x,
+                      ./images/banking_app_desk@2x.jpg 2x
+                    " />
+                  <img
+                    src="./images/banking_app.jpg"
+                    alt="banking app, the image of 7 violet screens of the bank app"
+                    width="360"
+                    height="300" />
+                </picture>
                 <p class="portfolio-app-img-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -408,11 +428,31 @@
             </li>
             <li class="portfolio-li">
               <div class="portfolio-app">
-                <img
-                  src="./images/cashless_payment.jpg"
-                  alt="cashless payment, the image of payment by smartphone through a cash terminal"
-                  width="360"
-                  height="300" />
+                <picture>
+                  <source
+                    media="(min-width: 320px)"
+                    srcset="
+                      ./images/cashless_payment_mob.jpg    1x,
+                      ./images/cashless_payment_mob@2x.jpg 2x
+                    " />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/cashless_payment_tab.jpg    1x,
+                      ./images/cashless_payment_tab@2x.jpg 2x
+                    " />
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/cashless_payment_desk.jpg.jpg 1x,
+                      ./images/cashless_payment_desk@2x.jpg  2x
+                    " />
+                  <img
+                    src="./images/cashless_payment.jpg"
+                    alt="cashless payment, the image of payment by smartphone through a cash terminal"
+                    width="360"
+                    height="300" />
+                </picture>
                 <p class="portfolio-app-img-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -426,11 +466,31 @@
             </li>
             <li class="portfolio-li">
               <div class="portfolio-app">
-                <img
-                  src="./images/meditation_app.jpg"
-                  alt="meditation app, the image of screens laptop and smartphone"
-                  width="360"
-                  height="300" />
+                <picture>
+                  <source
+                    media="(min-width: 320px)"
+                    srcset="
+                      ./images/meditation_app_mob.jpg    1x,
+                      ./images/meditation_app_mob@2x.jpg 2x
+                    " />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/meditation_app_tab.jpg    1x,
+                      ./images/meditation_app_tab@2x.jpg 2x
+                    " />
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/meditation_app_desk.jpg    1x,
+                      ./images/meditation_app_desk@2x.jpg 2x
+                    " />
+                  <img
+                    src="./images/meditation_app.jpg"
+                    alt="meditation app, the image of screens laptop and smartphone"
+                    width="360"
+                    height="300" />
+                </picture>
                 <p class="portfolio-app-img-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -444,11 +504,31 @@
             </li>
             <li class="portfolio-li">
               <div class="portfolio-app">
-                <img
-                  src="./images/taxi_service.jpg"
-                  alt="taxi service, the image of a smartphone in front of the driver's wheel"
-                  width="360"
-                  height="300" />
+                <picture>
+                  <source
+                    media="(min-width: 320px)"
+                    srcset="
+                      ./images/taxi_service_mob.jpg    1x,
+                      ./images/taxi_service_mob@2x.jpg 2x
+                    " />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/taxi_service_tab.jpg    1x,
+                      ./images/taxi_service_tab@2x.jpg 2x
+                    " />
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/taxi_service_desk.jpg    1x,
+                      ./images/taxi_service_desk@2x.jpg 2x
+                    " />
+                  <img
+                    src="./images/taxi_service.jpg"
+                    alt="taxi service, the image of a smartphone in front of the driver's wheel"
+                    width="360"
+                    height="300" />
+                </picture>
                 <p class="portfolio-app-img-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -462,11 +542,31 @@
             </li>
             <li class="portfolio-li">
               <div class="portfolio-app">
-                <img
-                  src="./images/screen_illustrations.jpg"
-                  alt="screen illustrations, the image of 5 screens of illustrations"
-                  width="360"
-                  height="300" />
+                <picture>
+                  <source
+                    media="(min-width: 320px)"
+                    srcset="
+                      ./images/screen_illustrations_mob.jpg    1x,
+                      ./images/screen_illustrations_mob@2x.jpg 2x
+                    " />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/screen_illustrations_tab.jpg    1x,
+                      ./images/screen_illustrations_tab@2x.jpg 2x
+                    " />
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/screen_illustrations_desk.jpg    1x,
+                      ./images/screen_illustrations_desk@2x.jpg 2x
+                    " />
+                  <img
+                    src="./images/screen_illustrations.jpg"
+                    alt="screen illustrations, the image of 5 screens of illustrations"
+                    width="360"
+                    height="300" />
+                </picture>
                 <p class="portfolio-app-img-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -480,11 +580,31 @@
             </li>
             <li class="portfolio-li">
               <div class="portfolio-app">
-                <img
-                  src="./images/online_courses.jpg"
-                  alt="online courses, the image of a smiling girl with a smartphone in her hand"
-                  width="360"
-                  height="300" />
+                <picture>
+                  <source
+                    media="(min-width: 320px)"
+                    srcset="
+                      ./images/online_courses_mob.jpg    1x,
+                      ./images/online_courses_mob@2x.jpg 2x
+                    " />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/online_courses_tab.jpg    1x,
+                      ./images/online_courses_tab@2x.jpg 2x
+                    " />
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/online_courses_desk.jpg    1x,
+                      ./images/online_courses_desk@2x.jpg 2x
+                    " />
+                  <img
+                    src="./images/online_courses.jpg"
+                    alt="online courses, the image of a smiling girl with a smartphone in her hand"
+                    width="360"
+                    height="300" />
+                </picture>
                 <p class="portfolio-app-img-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -498,7 +618,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- Footer -->
     <!-- <footer class="footer-menu">
