Updated all images to responsive graphics.

--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
             <li class="team-li">
               <img
                 srcset="
-                  ./images/mark_photo.jpg    1x,
-                  ./images/mark_photo@2x.jpg 2x
+                  ./images/team/mark_photo.jpg    1x,
+                  ./images/team/mark_photo@2x.jpg 2x
                 "
-                src="./images/mark_photo.jpg"
+                src="./images/team/mark_photo.jpg"
                 alt="Mark Guerrero, the Product Designer, a dark-haired man in a light blue shirt"
                 width="264"
                 height="260" />
@@ -190,8 +190,11 @@
             </li>
             <li class="team-li">
               <img
-                srcset="./images/tom_photo.jpg 1x, ./images/tom_photo@2x.jpg 2x"
-                src="./images/tom_photo.jpg"
+                srcset="
+                  ./images/team/tom_photo.jpg    1x,
+                  ./images/team/tom_photo@2x.jpg 2x
+                "
+                src="./images/team/tom_photo.jpg"
                 alt="Tom Ford, the Frontend Developer, a light-haired smiling man in a light blue shirt"
                 width="264"
                 height="260" />
@@ -253,10 +256,10 @@
             <li class="team-li">
               <img
                 srcset="
-                  ./images/camila_photo.jpg    1x,
-                  ./images/camila_photo@2x.jpg 2x
+                  ./images/team/camila_photo.jpg    1x,
+                  ./images/team/camila_photo@2x.jpg 2x
                 "
-                src="./images/camila_photo.jpg"
+                src="./images/team/camila_photo.jpg"
                 alt="Camila Garcia, the Marketing, a dark-haired woman in a pink sweater"
                 width="264"
                 height="260" />
@@ -318,10 +321,10 @@
             <li class="team-li">
               <img
                 srcset="
-                  ./images/daniel_photo.jpg    1x,
-                  ./images/daniel_photo@2x.jpg 2x
+                  ./images/team/daniel_photo.jpg    1x,
+                  ./images/team/daniel_photo@2x.jpg 2x
                 "
-                src="./images/daniel_photo.jpg"
+                src="./images/team/daniel_photo.jpg"
                 alt="Daniel Wilson, the UI Designer, a dark-haired smiling man in gray longsleeve"
                 width="264"
                 height="260" />
@@ -392,25 +395,25 @@
               <div class="portfolio-app">
                 <picture>
                   <source
-                    media="(min-width: 320px)"
+                    media="(max-width: 767px)"
                     srcset="
-                      ./images/banking_app_mob.jpg    1x,
-                      ./images/banking_app_mob@2x.jpg 2x
+                      ./images/portfolio/banking_app_mob.jpg    1x,
+                      ./images/portfolio/banking_app_mob@2x.jpg 2x
                     " />
                   <source
                     media="(min-width: 768px)"
                     srcset="
-                      ./images/banking_app_tab.jpg    1x,
-                      ./images/banking-app_tab@2x.jpg 2x
+                      ./images/portfolio/banking_app_tab.jpg    1x,
+                      ./images/portfolio/banking-app_tab@2x.jpg 2x
                     " />
                   <source
                     media="(min-width: 1158px)"
                     srcset="
-                      ./images/banking_app_desk.jpg    1x,
-                      ./images/banking_app_desk@2x.jpg 2x
+                      ./images/portfolio/banking_app_desk.jpg    1x,
+                      ./images/portfolio/banking_app_desk@2x.jpg 2x
                     " />
                   <img
-                    src="./images/banking_app.jpg"
+                    src="./images/portfolio/banking_app_desk.jpg"
                     alt="banking app, the image of 7 violet screens of the bank app"
                     width="360"
                     height="300" />
@@ -430,25 +433,25 @@
               <div class="portfolio-app">
                 <picture>
                   <source
-                    media="(min-width: 320px)"
+                    media="(max-width: 767px)"
                     srcset="
-                      ./images/cashless_payment_mob.jpg    1x,
-                      ./images/cashless_payment_mob@2x.jpg 2x
+                      ./images/portfolio/cashless_payment_mob.jpg    1x,
+                      ./images/portfolio/cashless_payment_mob@2x.jpg 2x
                     " />
                   <source
                     media="(min-width: 768px)"
                     srcset="
-                      ./images/cashless_payment_tab.jpg    1x,
-                      ./images/cashless_payment_tab@2x.jpg 2x
+                      ./images/portfolio/cashless_payment_tab.jpg    1x,
+                      ./images/portfolio/cashless_payment_tab@2x.jpg 2x
                     " />
                   <source
                     media="(min-width: 1158px)"
                     srcset="
-                      ./images/cashless_payment_desk.jpg.jpg 1x,
-                      ./images/cashless_payment_desk@2x.jpg  2x
+                      ./images/portfolio/cashless_payment_desk.jpg.jpg 1x,
+                      ./images/portfolio/cashless_payment_desk@2x.jpg  2x
                     " />
                   <img
-                    src="./images/cashless_payment.jpg"
+                    src="./images/portfolio/cashless_payment_desk.jpg"
                     alt="cashless payment, the image of payment by smartphone through a cash terminal"
                     width="360"
                     height="300" />
@@ -468,25 +471,25 @@
               <div class="portfolio-app">
                 <picture>
                   <source
-                    media="(min-width: 320px)"
+                    media="(max-width: 767px)"
                     srcset="
-                      ./images/meditation_app_mob.jpg    1x,
-                      ./images/meditation_app_mob@2x.jpg 2x
+                      ./images/portfolio/meditation_app_mob.jpg    1x,
+                      ./images/portfolio/meditation_app_mob@2x.jpg 2x
                     " />
                   <source
                     media="(min-width: 768px)"
                     srcset="
-                      ./images/meditation_app_tab.jpg    1x,
-                      ./images/meditation_app_tab@2x.jpg 2x
+                      ./images/portfolio/meditation_app_tab.jpg    1x,
+                      ./images/portfolio/meditation_app_tab@2x.jpg 2x
                     " />
                   <source
                     media="(min-width: 1158px)"
                     srcset="
-                      ./images/meditation_app_desk.jpg    1x,
-                      ./images/meditation_app_desk@2x.jpg 2x
+                      ./images/portfolio/meditation_app_desk.jpg    1x,
+                      ./images/portfolio/meditation_app_desk@2x.jpg 2x
                     " />
                   <img
-                    src="./images/meditation_app.jpg"
+                    src="./images/portfolio/meditation_app_desk.jpg"
                     alt="meditation app, the image of screens laptop and smartphone"
                     width="360"
                     height="300" />
@@ -506,25 +509,25 @@
               <div class="portfolio-app">
                 <picture>
                   <source
-                    media="(min-width: 320px)"
+                    media="(max-width: 767px)"
                     srcset="
-                      ./images/taxi_service_mob.jpg    1x,
-                      ./images/taxi_service_mob@2x.jpg 2x
+                      ./images/portfolio/taxi_service_mob.jpg    1x,
+                      ./images/portfolio/taxi_service_mob@2x.jpg 2x
                     " />
                   <source
                     media="(min-width: 768px)"
                     srcset="
-                      ./images/taxi_service_tab.jpg    1x,
-                      ./images/taxi_service_tab@2x.jpg 2x
+                      ./images/portfolio/taxi_service_tab.jpg    1x,
+                      ./images/portfolio/taxi_service_tab@2x.jpg 2x
                     " />
                   <source
                     media="(min-width: 1158px)"
                     srcset="
-                      ./images/taxi_service_desk.jpg    1x,
-                      ./images/taxi_service_desk@2x.jpg 2x
+                      ./images/portfolio/taxi_service_desk.jpg    1x,
+                      ./images/portfolio/taxi_service_desk@2x.jpg 2x
                     " />
                   <img
-                    src="./images/taxi_service.jpg"
+                    src="./images/portfolio/taxi_service_desk.jpg"
                     alt="taxi service, the image of a smartphone in front of the driver's wheel"
                     width="360"
                     height="300" />
@@ -544,25 +547,25 @@
               <div class="portfolio-app">
                 <picture>
                   <source
-                    media="(min-width: 320px)"
+                    media="(max-width: 767px)"
                     srcset="
-                      ./images/screen_illustrations_mob.jpg    1x,
-                      ./images/screen_illustrations_mob@2x.jpg 2x
+                      ./images/portfolio/screen_illustrations_mob.jpg    1x,
+                      ./images/portfolio/screen_illustrations_mob@2x.jpg 2x
                     " />
                   <source
                     media="(min-width: 768px)"
                     srcset="
-                      ./images/screen_illustrations_tab.jpg    1x,
-                      ./images/screen_illustrations_tab@2x.jpg 2x
+                      ./images/portfolio/screen_illustrations_tab.jpg    1x,
+                      ./images/portfolio/screen_illustrations_tab@2x.jpg 2x
                     " />
                   <source
                     media="(min-width: 1158px)"
                     srcset="
-                      ./images/screen_illustrations_desk.jpg    1x,
-                      ./images/screen_illustrations_desk@2x.jpg 2x
+                      ./images/portfolio/screen_illustrations_desk.jpg    1x,
+                      ./images/portfolio/screen_illustrations_desk@2x.jpg 2x
                     " />
                   <img
-                    src="./images/screen_illustrations.jpg"
+                    src="./images/portfolio/screen_illustrations_desk.jpg"
                     alt="screen illustrations, the image of 5 screens of illustrations"
                     width="360"
                     height="300" />
@@ -582,25 +585,25 @@
               <div class="portfolio-app">
                 <picture>
                   <source
-                    media="(min-width: 320px)"
+                    media="(max-width: 767px)"
                     srcset="
-                      ./images/online_courses_mob.jpg    1x,
-                      ./images/online_courses_mob@2x.jpg 2x
+                      ./images/portfolio/online_courses_mob.jpg    1x,
+                      ./images/portfolio/online_courses_mob@2x.jpg 2x
                     " />
                   <source
                     media="(min-width: 768px)"
                     srcset="
-                      ./images/online_courses_tab.jpg    1x,
-                      ./images/online_courses_tab@2x.jpg 2x
+                      ./images/portfolio/online_courses_tab.jpg    1x,
+                      ./images/portfolio/online_courses_tab@2x.jpg 2x
                     " />
                   <source
                     media="(min-width: 1158px)"
                     srcset="
-                      ./images/online_courses_desk.jpg    1x,
-                      ./images/online_courses_desk@2x.jpg 2x
+                      ./images/portfolio/online_courses_desk.jpg    1x,
+                      ./images/portfolio/online_courses_desk@2x.jpg 2x
                     " />
                   <img
-                    src="./images/online_courses.jpg"
+                    src="./images/portfolio/online_courses_desk.jpg"
                     alt="online courses, the image of a smiling girl with a smartphone in her hand"
                     width="360"
                     height="300" />
