Added styles and @media to footer for mobile, tablet, and desktop.

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                       ./images/portfolio/banking_app_desk@2x.jpg 2x
                     " />
                   <img
-                    src="./images/portfolio/banking_app_desk.jpg"
+                    src="/images/portfolio/banking_app_desk.jpg"
                     alt="banking app, the image of 7 violet screens of the bank app"
                     width="360"
                     height="300" />
@@ -624,7 +624,7 @@
       </section>
     </main>
     <!-- Footer -->
-    <!-- <footer class="footer-menu">
+    <footer class="footer-menu">
       <div class="container container-footer">
         <div class="container-footer-logo">
           <a class="logo" href="./index.html"
@@ -710,7 +710,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <!-- Modal window -->
     <!-- <div class="backdrop">
       <div class="modal">
