--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <!-- Header -->
-    <!-- <header class="header">
+    <header class="header">
       <div class="header-container container">
         <nav class="header-nav">
           <a class="logo" href="./index.html"
@@ -52,8 +52,101 @@
             </li>
           </ul>
         </address>
+        <button class="burger-btn" type="button" >
+          <svg class="burger-btn0icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-burger"></use>
+          </svg>
+        </button>
       </div>
-    </header> -->
+
+      <!-- Mobile menu -->
+       <div class="mobile-menu">
+        <button class="mobile-close-btn" type="button">
+          <svg class="icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <nav class="mobile-nav-menu">
+          <ul class="mobile-navigation">
+            <li>
+              <a class="mobile-nav-link current" href="./index.html">Studio</a>
+            </li>
+            <li>
+              <a class="mobile-nav-link" href="" >Portfolio</a>
+            </li>
+            <li>
+              <a class="mobile-nav-link" href="" >Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="mobile-contacts">
+            <ul class="mobile-contacts-list">
+              <li class="mobile-contacts-item">
+                <a class="mobile-link-phone" href="tel:+110001111111" 
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li class="mobile-contacts-item">
+                <a class="mobile-link-email" href="mailto:info@devstudio.com" 
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+          <ul class="mobile-socials-list">
+            <li class="mobile-socials-item">
+              <a
+                class="mobile-socials-link"
+                href="https://www.instagram.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Instagram site">
+                <svg class="mobile-socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-socials-item">
+              <a
+                class="mobile-socials-link"
+                href="https://www.twitter.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Twitter site">
+                <svg class="mobile-socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-socials-item">
+              <a
+                class="mobile-socials-link"
+                href="https://www.facebook.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Facebook site">
+                <svg class="mobile-socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-socials-item">
+              <a
+                class="mobile-socials-link"
+                href="https://www.linkedin.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Linkedin site">
+                <svg class="mobile-socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+
+    </header>
     <main>
       <!-- Hero section -->
       <section class="hero-section">
