--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             </li>
           </ul>
         </address>
-        <button class="burger-btn" type="button" >
-          <svg class="burger-btn0icon" width="24" height="24">
+        <button class="mobile-burger-btn" type="button" >
+          <svg class="mobile-burger-btn-icon" width="24" height="24">
             <use href="./images/icons.svg#icon-burger"></use>
           </svg>
         </button>
