Updated html+styles.css files.

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
             </li>
           </ul>
         </address>
-        <button class="mobile-burger-btn" type="button" >
+        <button class="mobile-burger-btn" type="button">
           <svg class="mobile-burger-btn-icon" width="24" height="24">
             <use href="./images/icons.svg#icon-burger"></use>
           </svg>
         </button>
       </div>
       <!-- Mobile menu -->
-       <div class="mobile-menu">
+      <div class="mobile-menu">
         <button class="mobile-close-btn" type="button">
           <svg class="icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
@@ -71,26 +71,26 @@
               <a class="mobile-nav-link current" href="./index.html">Studio</a>
             </li>
             <li>
-              <a class="mobile-nav-link" href="" >Portfolio</a>
+              <a class="mobile-nav-link" href="">Portfolio</a>
             </li>
             <li>
-              <a class="mobile-nav-link" href="" >Contacts</a>
+              <a class="mobile-nav-link" href="">Contacts</a>
             </li>
           </ul>
         </nav>
         <div class="mobile-contacts">
-            <ul class="mobile-contacts-list">
-              <li class="mobile-contacts-item">
-                <a class="mobile-link-phone" href="tel:+110001111111" 
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-              <li class="mobile-contacts-item">
-                <a class="mobile-link-email" href="mailto:info@devstudio.com" 
-                  >info@devstudio.com</a
-                >
-              </li>
-            </ul>
+          <ul class="mobile-contacts-list">
+            <li class="mobile-contacts-item">
+              <a class="mobile-link-phone" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li class="mobile-contacts-item">
+              <a class="mobile-link-email" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
           <ul class="mobile-socials-list">
             <li class="mobile-socials-item">
               <a
@@ -534,12 +534,12 @@
                       ./images/portfolio/cashless_payment_tab.jpg    1x,
                       ./images/portfolio/cashless_payment_tab@2x.jpg 2x
                     " />
-                    <source
+                  <source
                     media="(max-width: 767px)"
                     srcset="
                       ./images/portfolio/cashless_payment_mob.jpg    1x,
                       ./images/portfolio/cashless_payment_mob@2x.jpg 2x
-                    " />  
+                    " />
                   <img
                     src="./images/portfolio/cashless_payment_desk.jpg"
                     alt="cashless payment, the image of payment by smartphone through a cash terminal"
@@ -571,7 +571,7 @@
                     srcset="
                       ./images/portfolio/meditation_app_tab.jpg    1x,
                       ./images/portfolio/meditation_app_tab@2x.jpg 2x
-                    " />  
+                    " />
                   <source
                     media="(max-width: 767px)"
                     srcset="
@@ -615,7 +615,7 @@
                     srcset="
                       ./images/portfolio/taxi_service_mob.jpg    1x,
                       ./images/portfolio/taxi_service_mob@2x.jpg 2x
-                    " />  
+                    " />
                   <img
                     src="./images/portfolio/taxi_service_desk.jpg"
                     alt="taxi service, the image of a smartphone in front of the driver's wheel"
@@ -647,7 +647,7 @@
                     srcset="
                       ./images/portfolio/screen_illustrations_tab.jpg    1x,
                       ./images/portfolio/screen_illustrations_tab@2x.jpg 2x
-                    " />    
+                    " />
                   <source
                     media="(max-width: 767px)"
                     srcset="
@@ -685,7 +685,7 @@
                     srcset="
                       ./images/portfolio/online_courses_tab.jpg    1x,
                       ./images/portfolio/online_courses_tab@2x.jpg 2x
-                    " />  
+                    " />
                   <source
                     media="(max-width: 767px)"
                     srcset="
@@ -870,8 +870,7 @@
               type="checkbox"
               name="user-privacy"
               id="user-privacy"
-              value="true"
-            />
+              value="true" />
             <label class="form-label" for="user-privacy">
               <span class="checkbox-icon">
                 <svg class="icon-vector" width="10" height="8">
