Update script to modal window

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <section class="hero-section">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button class="hero-button" type="button" id="openModalBtn">
+          <button class="hero-button" type="button" id="open-modal-btn">
             Order Service
           </button>
         </div>
@@ -804,10 +804,10 @@
       </div>
     </footer>
     <!-- Modal window -->
-    <div class="backdrop">
-      <div id="modal" class="modal">
+    <div class="backdrop" id="backdrop">
+      <div class="modal">
         <button
-          id="closeModal"
+          id="close-modal-btn"
           class="modal-btn-close"
           type="button"
           aria-label="Modal close button">
