--- a/index.html
+++ b/index.html
@@ -60,88 +60,87 @@
       </div>
       <!-- Mobile menu -->
       <div class="mobile-menu">
-        <button class="mobile-close-btn" type="button">
-          <svg class="icon" width="8" height="8">
-            <use href="./images/icons.svg#icon-close"></use>
-          </svg>
-        </button>
-        <nav class="mobile-nav-menu">
-          <ul class="mobile-navigation">
-            <li>
-              <a class="mobile-nav-link current" href="./index.html">Studio</a>
-            </li>
-            <li>
-              <a class="mobile-nav-link" href="">Portfolio</a>
-            </li>
-            <li>
-              <a class="mobile-nav-link" href="">Contacts</a>
-            </li>
-          </ul>
-        </nav>
-        <div class="mobile-contacts">
-          <ul class="mobile-contacts-list">
-            <li class="mobile-contacts-item">
-              <a class="mobile-link-phone" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-            <li class="mobile-contacts-item">
-              <a class="mobile-link-email" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-          </ul>
-          <ul class="mobile-socials-list">
-            <li class="mobile-socials-item">
-              <a
-                class="mobile-socials-link"
-                href="https://www.instagram.com"
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="Instagram site">
-                <svg class="mobile-socials-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="mobile-socials-item">
-              <a
-                class="mobile-socials-link"
-                href="https://www.twitter.com"
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="Twitter site">
-                <svg class="mobile-socials-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="mobile-socials-item">
-              <a
-                class="mobile-socials-link"
-                href="https://www.facebook.com"
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="Facebook site">
-                <svg class="mobile-socials-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="mobile-socials-item">
-              <a
-                class="mobile-socials-link"
-                href="https://www.linkedin.com"
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="Linkedin site">
-                <svg class="mobile-socials-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
+      <button class="mobile-close-btn" type="button">
+        <svg class="icon" width="8" height="8">
+          <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+      </button>
+      <nav class="mobile-nav-menu">
+        <ul class="mobile-navigation">
+          <li>
+            <a class="mobile-nav-link current" href="./index.html">Studio</a>
+          </li>
+          <li>
+            <a class="mobile-nav-link" href="">Portfolio</a>
+          </li>
+          <li>
+            <a class="mobile-nav-link" href="">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="mobile-contacts">
+        <ul class="mobile-contacts-list">
+          <li class="mobile-contacts-item">
+            <a class="mobile-link-phone" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+          <li class="mobile-contacts-item">
+            <a class="mobile-link-email" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
+        <ul class="mobile-socials-list">
+          <li class="mobile-socials-item">
+            <a
+              class="mobile-socials-link"
+              href="https://www.instagram.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="Instagram site">
+              <svg class="mobile-socials-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-socials-item">
+            <a
+              class="mobile-socials-link"
+              href="https://www.twitter.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="Twitter site">
+              <svg class="mobile-socials-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-socials-item">
+            <a
+              class="mobile-socials-link"
+              href="https://www.facebook.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="Facebook site">
+              <svg class="mobile-socials-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-socials-item">
+            <a
+              class="mobile-socials-link"
+              href="https://www.linkedin.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="Linkedin site">
+              <svg class="mobile-socials-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </header>
     <main>
@@ -527,8 +526,8 @@
                   <source
                     media="(min-width: 1158px)"
                     srcset="
-                      ./images/portfolio/cashless_payment_desk.jpg.jpg 1x,
-                      ./images/portfolio/cashless_payment_desk@2x.jpg  2x
+                      ./images/portfolio/cashless_payment_desk.jpg    1x,
+                      ./images/portfolio/cashless_payment_desk@2x.jpg 2x
                     " />
                   <source
                     media="(min-width: 768px)"
