--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
         </button>
       </div>
       <!-- Mobile menu -->
-      <div class="mobile-menu">
+      <div class="js-mobile-menu">
+        <div class="mobile-menu">
       <button class="mobile-close-btn" type="button">
         <svg class="icon" width="8" height="8">
           <use href="./images/icons.svg#icon-close"></use>
@@ -142,6 +143,7 @@
           </li>
         </ul>
       </div>
+    </div>
     </header>
     <main>
       <!-- Hero section -->
