Add scroll-bar button

--- a/index.html
+++ b/index.html
@@ -804,6 +804,11 @@
         </div>
       </div>
     </footer>
+    <button class="scroll-btn">
+      <svg class="faq-arrow-down" width="20" height="20">
+        <use href="./images/icons.svg#icon-keyboard_arrow_up"></use> 
+      </svg>
+    </button>
     <!-- Modal window -->
     <div class="backdrop" id="backdrop">
       <div class="modal">
