--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
       </div>
     </footer>
     <button class="scroll-btn">
-      <svg class="faq-arrow-down" width="20" height="20">
+      <svg class="icon-arrow-up" width="20" height="20">
         <use href="./images/icons.svg#icon-keyboard_arrow_up"></use> 
       </svg>
     </button>
