Update script to modal window

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <a class="nav-link" href="">Portfolio</a>
             </li>
             <li>
-              <a class="nav-link" href="">Contacts</a>
+              <a class="nav-link" id="nav-link" href="javascript:void(0);">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -75,7 +75,7 @@
             <a class="mobile-nav-link" href="">Portfolio</a>
           </li>
           <li>
-            <a class="mobile-nav-link" href="">Contacts</a>
+            <a class="mobile-nav-link" id="mobile-nav-link" href="javascript:void(0);">Contacts</a>
           </li>
         </ul>
       </nav>
