Update modal window

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <section class="hero-section">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button class="hero-button" type="button" id="open-modal-btn">
+          <button class="hero-button" type="button">
             Order Service
           </button>
         </div>
@@ -810,7 +810,7 @@
       </svg>
     </button>
     <!-- Modal window -->
-    <div class="backdrop" id="backdrop">
+    <div class="backdrop">
       <div class="modal">
         <button
           id="close-modal-btn"
