--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <a class="nav-link" href="">Portfolio</a>
             </li>
             <li>
-              <a class="nav-link" id="nav-link" href="javascript:void(0);">Contacts</a>
+              <a class="nav-link" href="">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -60,7 +60,7 @@
       </div>
       <!-- Mobile menu -->
       <div class="js-mobile-menu">
-        <div class="mobile-menu">
+      <div class="mobile-menu">
       <button class="mobile-close-btn" type="button">
         <svg class="icon" width="8" height="8">
           <use href="./images/icons.svg#icon-close"></use>
@@ -75,7 +75,7 @@
             <a class="mobile-nav-link" href="">Portfolio</a>
           </li>
           <li>
-            <a class="mobile-nav-link" id="mobile-nav-link" href="javascript:void(0);">Contacts</a>
+            <a class="mobile-nav-link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
