--- a/index.html
+++ b/index.html
@@ -804,6 +804,7 @@
         </div>
       </div>
     </footer>
+    <!-- Scroll btn -->
     <button class="scroll-btn">
       <svg class="icon-arrow-up" width="20" height="20">
         <use href="./images/icons.svg#icon-keyboard_arrow_up"></use> 
