Update script to mobile modal window

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
           >
           <ul class="nav-items">
             <li>
-              <a class="nav-link current" href="./index.html">Studio</a>
+              <a class="nav-link current" href="#Studio">Studio</a>
             </li>
             <li>
-              <a class="nav-link" href="">Portfolio</a>
+              <a class="nav-link" href="#Portfolio">Portfolio</a>
             </li>
             <li>
-              <a class="nav-link" href="">Contacts</a>
+              <a class="nav-link" href="#Contacts">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -69,13 +69,16 @@
         <nav class="mobile-nav-menu">
         <ul class="mobile-navigation">
           <li>
-            <a class="mobile-nav-link current" href="./index.html">Studio</a>
+            <a class="mobile-nav-link current" href="#Studio">Studio</a>
+          </li>
+            <li>
+            <a class="mobile-nav-link" href="#Team">Team</a>
           </li>
           <li>
-            <a class="mobile-nav-link" href="">Portfolio</a>
+            <a class="mobile-nav-link" href="#Portfolio">Portfolio</a>
           </li>
           <li>
-            <a class="mobile-nav-link" href="">Contacts</a>
+            <a class="mobile-nav-link" href="#Contacts">Contacts</a>
           </li>
         </ul>
         </nav>
@@ -156,7 +159,7 @@
         </div>
       </section>
       <!-- Feature section -->
-      <section class="feature-section">
+      <section class="feature-section" id="Studio">
         <div class="container">
           <h2 class="visually-hidden">Our Features</h2>
           <ul class="feature-list">
@@ -212,7 +215,7 @@
         </div>
       </section>
       <!-- Team section  -->
-      <section class="team-section">
+      <section class="team-section" id="Team">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="team-list">
@@ -480,7 +483,7 @@
         </div>
       </section>
       <!-- Portfolio section -->
-      <section class="portfolio-section">
+      <section class="portfolio-section" id="Portfolio">
         <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -717,7 +720,7 @@
       </section>
     </main>
     <!-- Footer -->
-    <footer class="footer-menu">
+    <footer class="footer-menu" id="Contacts">
       <div class="container container-footer">
         <div class="container-footer-logo">
           <a class="logo" href="./index.html"
